# inventory

./: .env.example  .gitignore  Makefile  README.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  create_fake_data.py  init_db.py  ldap_debug.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_loans_borrower_id.py  0002_security_levels_and_roles.py  0003_drop_borrower_display.py  0003_drop_loan_borrower_display_name.py  0003_users_table.py
backend/app/: __init__.py  auth.py  config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/routers/: catalog.py  devices.py  loans.py  users.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.vue  api.js  main.js  router.js
frontend/src/views/: Inventory.vue  Login.vue
screenshots/: package-lock.json  package.json
