[project]
name = "inventory-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Maulaz Tony",email = "tony.maulaz@heig-vd.ch"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (==0.104.1)",
    "uvicorn[standard] (==0.23.2)",
    "sqlalchemy (==2.0.23)",
    "psycopg2-binary (==2.9.9)",
    "python-jose (==3.3.0)",
    "python-multipart (==0.0.6)",
    "ldap3 (==2.9.1)",
    "pydantic (==1.10.13)",
    "alembic (==1.12.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
